2012-08-08  Yury Semikhatsky  <yurys@chromium.org>

        Web Inspector: cached images memory instrumentation regression after r124744
        https://bugs.webkit.org/show_bug.cgi?id=93366

        Reviewed by Vsevolod Vlasov.

        Added a sanity test checking that memory usage data includes decoded image size.

        * inspector/profiler/memory-instrumentation-cached-images-expected.txt: Added.
        * inspector/profiler/memory-instrumentation-cached-images.html: Added.

2012-08-08  Douglas Stockwell  <dstockwell@chromium.org>

        'highlight' should not be parsed for a composite operation
        https://bugs.webkit.org/show_bug.cgi?id=92615

        Reviewed by Ryosuke Niwa.

        * fast/backgrounds/composite-highlight-is-invalid-expected.txt: Added.
        * fast/backgrounds/composite-highlight-is-invalid.html: Added.

2012-08-08  Takashi Toyoshima  <toyoshim@chromium.org>

        Unreviewed, adding new results for chromium.

        http://trac.webkit.org/changeset/124986 this change added new results
        for Mac and it has a high priority. Then, we need to add specific
        results for chromium.

        * platform/chromium/media/video-seek-past-end-paused-expected.txt: Added.

2012-08-07  Mario Sanchez Prada  <msanchez@igalia.com>

        Unreviewed. Remove fail expectations for tests that should not be
        crashing anymore after r124997.

        * platform/gtk/TestExpectations: Update test expectations.

2012-08-07  Takashi Toyoshima  <toyoshim@chromium.org>

        Unreviewed, update expectation.
        https://bugs.webkit.org/show_bug.cgi?id=93225

        * platform/chromium/TestExpectations:

2012-08-07  Takashi Toyoshima  <toyoshim@chromium.org>

        Unreviewed, update expectation.
        https://bugs.webkit.org/show_bug.cgi?id=93439

        * platform/chromium/TestExpectations:

2012-08-07  Takashi Toyoshima  <toyoshim@chromium.org>

        Unreviewed, rebaseline for chromium Mac10.7
