@@ -87,8 +87,7 @@ function test()
 Tests that changes to an inline style from JavaScript are reflected in the Styles pane and Elements tree.
 </p>
 
-<div id="container" style="font-weight:bold">
-</div>
+<div id="container" style="font-weight:bold"></div>
 
 </body>
 </html>
